# TEMPO

./: .gitignore  README.md  TEMPO_example.ipynb  bulk_data_lung_Alveolus.h5ad  pyproject.toml
tempo/tempo_sc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tempo/新建文件夹/: __init__.py  data.py  models.py  selector.py  utils.py
