[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "tempo-sc"
version = "0.1.0"
description = "TEMPO-SC: Time-Point Selection for Single-Cell and Bulk Temporal Transcriptomics"
readme = "README.md"
license = { text = "MIT" }

requires-python = ">=3.9"

dependencies = [
    "numpy>=1.20",
    "torch>=1.9",
    "anndata>=0.8",
    "scanpy>=1.9",
]


[project.urls]
Homepage = "https://github.com/yourusername/tempo-sc"
Source = "https://github.com/yourusername/tempo-sc"
Issues = "https://github.com/yourusername/tempo-sc/issues"


[tool.setuptools.packages.find]
where = ["."]
include = ["tempo_sc*"]
